--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -3,9 +3,10 @@
 }
 
 .post-content figure>img[src*="#center"] {
-    margin: auto 1rem auto 0;
+    margin: 1rem auto 0;
 }
 
 .post-content figure>figcaption>p {
     margin: 2px 0 16px;
+    text-align: center;
 }
